--- a/css/personal.css
+++ b/css/personal.css
@@ -15,11 +15,12 @@ a {
 }
 
 body {
-    min-width: 960px;
+    width: 100%;
     background: linear-gradient(to right, #7fb9a7, #009cc8, #54a6b987, #f6caca8c) no-repeat;
     background-size: cover;
     /* box-sizing: border-box; */
     /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
+    font-family: 'shoushu','Muyao' !important;
 }
 
 .box {
@@ -44,7 +45,7 @@ body {
 .content {
     overflow: hidden;
     display: flex;
-    width: 1100px;
+    width: 100%;
     height: 70%;
     /* background-color: rgba(255, 255, 255, 0.6); */
     flex-direction: row;
@@ -67,16 +68,17 @@ body {
 .ide {
     display: flex;
     position: relative;
-    width: 40%;
+    width: 100%;
     height: 100%;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(75deg, #1eb9b9af, #58a8cb94, #7495dd8a, #8780eea2);
+    background: linear-gradient(75deg, #ec564e69, #85cfef47, #7495dd55, #8780ee4d);
     backdrop-filter: blur(2px);
     border-radius: 5px;
     box-shadow: 0px 0px 6px rgba(0, 0, 0, .2);
+    font-family: 'shoushu','Muyao' !important;
 }
 
 .ide img {
