--- a/css/font.css
+++ b/css/font.css
@@ -1,12 +1,12 @@
 @font-face{
     font-family: 'shoushu';
     font-display: swap;
-    src: url('https://cdn.jsdelivr.net/gh/tge8/hexo-cdn@1.6/font/shoushu.ttf') format("truetype");
+    src: url('/font/shoushu.ttf') format("truetype");
 }
 @font-face{
     font-family: 'Muyao';
     font-display: swap;
-    src: url('https://cdn.jsdelivr.net/gh/tge8/hexo-cdn@1.6/font/Muyao.ttf') format("truetype");
+    src: url('/font/Muyao.ttf') format("truetype");
 }
 body {
     font-family: 'shoushu','Muyao';
