背景按钮修改

--- a/css/_mode/readmode.styl
+++ b/css/_mode/readmode.styl
@@ -28,7 +28,7 @@ if hexo-config('readmode')
       --exit-btn-hover: lighten(#1f1f1f, 20)
 
   .read-mode
-    background: var(--readmode-light-color)
+    background: url(https://pic.imgdb.cn/item/65444d3ac458853aefde0cab.png)
 
     .exit-readmode
       position: fixed
