--- a/css/_mode/readmode.styl
+++ b/css/_mode/readmode.styl
@@ -15,10 +15,10 @@ if hexo-config('readmode')
 
   [data-theme='dark']
     .read-mode
-      --font-color: rgba(255, 255, 255, .7)
+      --font-color: rgba(111, 109, 109, 1)
       --readmode-light-color: #0d0d0d
-      --white: rgba(255, 255, 255, .9)
-      --light-grey: rgba(255, 255, 255, .7)
+      --white: rgba(111, 109, 109, 1)
+      --light-grey: rgba(111, 109, 109, 1)
       --gray: rgba(255, 255, 255, .7)
       --hr-border: rgba(255, 255, 255, .5)
       --hr-before-color: rgba(255, 255, 255, .7)
@@ -28,7 +28,7 @@ if hexo-config('readmode')
       --exit-btn-hover: lighten(#1f1f1f, 20)
 
   .read-mode
-    background: url(https://pic.imgdb.cn/item/65444d3ac458853aefde0cab.png)
+    background: linear-gradient(to right, #ffdfc7, #bde3ff)
 
     .exit-readmode
       position: fixed
