--- a/css/neonlight.css
+++ b/css/neonlight.css
@@ -2,7 +2,7 @@
 #aside_content .card-widget, #recent-posts>.recent-post-item, .layout_page>div:first-child:not(.recent-posts), .layout_post>#page, .layout_post>#post, .read-mode .layout_post>#post{
     /* 以下代表白色透明度为0.3 */
     background: rgba(148, 195, 199, 0.395) !important;
-    border:2px solid #0ff5ff;
+    border:2px solid #0ff5ff !important;
     box-shadow: 1px 1px 10px #0ff5ff !important;
 }
 #git_container,#archive,#page{
